Name:		pipeline
Version:	0.3.2.0
Synopsis:	pipeline for Mone Carlo run
Description: 	pipeline for Monte Carlo run, 
                it manages computing machine and processes.
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.6
-- data-dir:
data-files: template/*.f
            template/*.dat.st
            template/*.m.st
            template/*.m
            template/*.f.st
            template/*.pbs.st
            template/*.dat
            template/*.inc
            template/*.sh.st
            template/run_pgs_notau

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, process, unix, directory, mtl>2, 
                 madgraph-auto > 0.4,  parsec>3, filepath,
                 LHCOAnalysis-type, LHCOAnalysis >0.5, webdav-manager > 0.0.2,
                 LHEParser, attoparsec,
                 iteratee, iteratee-util > 0.0.2, binary, bytestring,
                 HStringTemplate, HStringTemplateHelpersIW, 
                 jobqueue-common, configparser
  Exposed-Modules: 
                   HEP.Automation.Pipeline
                   HEP.Automation.Pipeline.Config
                   HEP.Automation.Pipeline.Job
 
--                   HEP.Automation.PipelineOld
--                   HEP.Automation.PipelineOld.Type
--                   HEP.Automation.PipelineOld.Config
--                   HEP.Automation.PipelineOld.Upload
--                   HEP.Automation.PipelineOld.Download
--                   HEP.Automation.PipelineOld.EventGeneration 
--                   HEP.Automation.PipelineOld.DetectorAnalysis
--                   HEP.Automation.PipelineOld.TopRecon
--                   HEP.Automation.PipelineOld.TopAFB
--                   HEP.Automation.PipelineOld.TopAFBDecayed
--                   HEP.Automation.PipelineOld.PartonLevelAnalysis
  Other-Modules:   
                   Paths_pipeline


		 
