Name:		pipeline
Version:	0.999
Synopsis:	pipeline for Mone Carlo run
Description: 	pipeline for Monte Carlo run, 
                it manages computing machine and processes.
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.6
data-files: 

-- Executable pipeline-supervisor
--   Main-is: pipeline-supervisor.hs
--   hs-source-dirs: exe
--   ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
--   ghc-prof-options: -caf-all -auto-all
--   Build-Depends: base>4, 
--                  cmdargs >= 0.7, 
--                 scotty >= 0.4.6


Executable pipeline-worker 
  Main-is: pipeline-worker.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 cmdargs >= 0.7, 
                 process, 
                 time, 
                 filepath, 
                 pipeline-eventgen,
                 webdav-manager




 
